fix: P4ADEV-908-encrypt-fiscal-code (#33)
* P4ADEV-908-encrypt-fiscal-code

* P4ADEV-899-fix-payload

* P4ADEV-908-encrypt-fiscal-code
